Update voltageLevel creation endpoint
Signed-off-by: Ayoub LABIDI <ayoub.labidi@protonmail.com>